test: add tests for link generation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,9 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ipykernel>=7.2.0",
+    "pytest>=9.0.2",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["backend/lambda"]
+addopts   = "-v"
