--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.42.53",
     "pandas>=3.0.1",
+    "seaborn>=0.13.2",
 ]
 
 [dependency-groups]
